<resources>
    <string name="app_name">Touch-Based Mesh Warping</string>
    <string name="about">About</string>
    <string name="about_text">\nDeformer - A cool application make hilarious things with any photo. You can easily make cheerful animations with yourself or your friend being stretch and deform into an amusing character. All processed photos and movies can be stored on your device. You are guaranteed to grab all attention, showing caricatures you made to your friends.</string>
    <string name="activation_code">Promo code</string>
    <string name="activation_code_title">Please enter promo code to opt-out of ads</string>
    <string name="activation_code_wrong">Wrong value!</string>
    <string name="agree">Agree</string>
    <string name="albumname">Deformer Images</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anim_gif">Animation</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="askdeleteproj">Do you really want to delete selected project?</string>
    <string name="askinapp">Do you want opt-out of ads?</string>
    <string name="askmoresoft">Thank you for using Photo Deformer!\nWould you like to take a look on other software from us?</string>
    <string name="asksave">Do you want to save your deformation?</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="buy">Purchase</string>
    <string name="caller_id">Caller ID</string>
    <string name="camera">Camera</string>
    <string name="cameratip">Use camera to create amazing caricatures!</string>
    <string name="cantcamera">Camera not found!</string>
    <string name="cantload">Can\'t load photo!</string>
    <string name="cantsdcard">Can\'t find suitable media to save! Please insert and/or mount SD card!</string>
    <string name="cantsend">Error during send!</string>
    <string name="chip_text">Chip text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="crop3_4">Crop image to 3x4 (4x3)</string>
    <string name="darkPlayBckg">Dark background</string>
    <string name="darkPlayBckgSummary">Use a dark background while playing the animation</string>
    <string name="default_web_client_id">160750595499-cdcmrkjpkihbrogfre3m7h900ofct4nd.apps.googleusercontent.com</string>
    <string name="deformscreen_name">Deformation screen</string>
    <string name="delete">Delete</string>
    <string name="delete_fb">Facebook Log Out</string>
    <string name="dither">Dither</string>
    <string name="dontshow">Don\'t show again</string>
    <string name="duration">Duration (sec):</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_label">Facebook</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fb_caption">Photo was created with STOIK Deformer(http://www.facebook.com/pages/Photo-Deformer/344212668924287)</string>
    <string name="fb_error">Facebook error:</string>
    <string name="fb_ok">Your picture was successfully uploaded to your Facebook account!</string>
    <string name="fb_progress">Uploading, please wait...</string>
    <string name="fbload">Facebook</string>
    <string name="firebase_database_url">https://deformer-415ff.firebaseio.com</string>
    <string name="fps">Frames per sec:</string>
    <string name="gcm_defaultSenderId">160750595499</string>
    <string name="gdprdata">Personal data usage</string>
    <string name="gifparams">GIF animation options</string>
    <string name="gifsavedas">Animation saved on SD card into</string>
    <string name="google_api_key">AIzaSyBIpn6EYcNNuNSwC5le0qJNsoHoawjfKXY</string>
    <string name="google_app_id">1:160750595499:android:39d26cc5bf40ec87a676ee</string>
    <string name="google_crash_reporting_api_key">AIzaSyBIpn6EYcNNuNSwC5le0qJNsoHoawjfKXY</string>
    <string name="google_storage_bucket">deformer-415ff.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="install">INSTALL</string>
    <string name="install_calldorado">CallerID will be added. Photo Deformer will assist you to identify callers - even the ones not in your contact list. This means no more unknown numbers. This feature is optional and you can disable at any time in the settings menu.\nDo you want to continue?</string>
    <string name="install_wallet_from_iab">To pay for this app, you need to install the AppCoins BDS Wallet.</string>
    <string name="label">Label</string>
    <string name="later">Remind me later</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="loadphoto_label">Load photo</string>
    <string name="loop">Loop</string>
    <string name="main_title">Photo Deformer</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="moresofttitle">More software</string>
    <string name="movetip">Slide your finger across the screen</string>
    <string name="mp4params">MP4 animation options</string>
    <string name="my_photos">My photos</string>
    <string name="mydeformations_label">My deformations</string>
    <string name="native_body">Body</string>
    <string name="native_headline">Headline</string>
    <string name="native_media_view">Media View</string>
    <string name="no">No</string>
    <string name="no_album">No album found</string>
    <string name="no_permission">Not enough permissions to continue!</string>
    <string name="nofullfile">Can\'t find initial file to render!</string>
    <string name="nomoresoft">No, thanks</string>
    <string name="norate">No, thanks</string>
    <string name="notfree">This app is not free, please pay for this app.</string>
    <string name="notinfree">Sorry, but this option not available in free version!\nDo you want to visit marketplace to purchase Pro version?</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="ok">OK</string>
    <string name="oldStyleUndo">Undo/Redo mode</string>
    <string name="oldStyleUndoSummary">Use Undo/Redo as deformation power control</string>
    <string name="open">Open</string>
    <string name="opensignal_sdk_details">Data collection used to measures connectivity information to help operators improve their networks. To learn more about how we use your data see our privacy policy at http://www.stoik.mobi//privacypolicy_mdscan_lite.html</string>
    <string name="opensignal_sdk_enabled">Data collection enabled</string>
    <string name="opensignal_start">You are using this app free of charge, we fund the development and maintenance of this app through the use of third party SDKs. These SDKs are collecting varied data, in some cases including personally identifiable data. This data is shared with third parties worldwide, but you can disable data collection at any time in the settings. To learn more about the data collected visit our &lt;a href=http://www.stoik.mobi//privacypolicy_mdscan_lite.html&gt;Privacy Policy&lt;/a&gt;. If you are under 16, you need to ask your parent or guardian.</string>
    <string name="permission_camera">Access to camera needed to continue</string>
    <string name="permission_contacts">Access to contacts needed to continue</string>
    <string name="permission_storage">Access to storage needed to continue</string>
    <string name="photo">Photo</string>
    <string name="please_wait">Please wait...</string>
    <string name="presstip">Click and hold your finger on screen</string>
    <string name="project_id">deformer-415ff</string>
    <string name="ratedlgtitle">Rate Deformer</string>
    <string name="ratemsg">If you enjoy using Deformer, please take a moment to rate it. Thanks for your support!</string>
    <string name="refuse">Refuse</string>
    <string name="render">Rendering. Please wait...</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="mode_forward">Mode: Forward</string>
    <string name="restore">Restore</string>
    <string name="radius_add">Radius (+)</string>
    <string name="radius_minus">Radius (-)</string>
    <string name="intensity_add">Intensity (+)</string>
    <string name="intensity_minus">Intensity (-)</string>
    <string name="intensity_0_3">Intensity (%s)</string>
    <string name="radius_200">Radius (%s)</string>
</resources>