<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/mode_forward"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbRestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/restore"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/mbMode"
        app:layout_constraintTop_toTopOf="parent" />

    <org.wysaid.view.ImageGLSurfaceView
        android:id="@+id/gl_surface_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbMode" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/mtvRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbRadiusAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:text="@string/radius_add"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mbRadiusMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbRadiusMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/radius_minus"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mbIntensityAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mbRadiusAdd" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radius_200"
        app:layout_constraintBottom_toTopOf="@+id/mbRadiusAdd"
        app:layout_constraintEnd_toStartOf="@+id/mbRadiusMinus"
        app:layout_constraintStart_toEndOf="@+id/mbRadiusAdd" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbIntensityAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/intensity_add"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mbIntensityMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mbRadiusMinus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbIntensityMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/intensity_minus"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mbIntensityAdd" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvIntensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intensity_0_3"
        app:layout_constraintBottom_toTopOf="@+id/mbIntensityAdd"
        app:layout_constraintEnd_toStartOf="@+id/mbIntensityMinus"
        app:layout_constraintStart_toEndOf="@+id/mbIntensityAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>